feat: add pagination to get all requests
